apps/navidrome/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  type: ClusterIP
  selector:
    app: navidrome
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
